--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "lint": "jshint routes public/js --exclude public/js/lib"
+    "lint": "node_modules/.bin/jshint routes public/js --exclude public/js/lib"
   },
   "dependencies": {
     "express": "~4.9.0",
@@ -16,6 +16,6 @@
     "jade": "~1.6.0"
   },
   "devDependencies": {
-    "jshint": "~2.5.6"
+    "jshint": "~2.6.3"
   }
 }
